Вкладка "компоненты" готова. Компоненты в карточке продукции готовы